--- a/index.html
+++ b/index.html
@@ -218,9 +218,9 @@
     <!-- LEFT CONTENT -->
     <div class="about-left reveal">
       <span class="about-tag">ABOUT US</span>
-      <h2>Techco <span>Mission & Goal</span></h2>
+      <h2>Stackly <span>Mission & Goal</span></h2>
       <p>
-        At Techco, our mission is to empower businesses through innovative
+        At Stackly, our mission is to empower businesses through innovative
         software solutions that streamline operations, foster growth,
         and drive success. With a commitment to excellence and customer
         satisfaction we strive.
@@ -485,7 +485,7 @@ document.querySelectorAll('.acc-header').forEach(header => {
         <img src="image/logo.webp" alt="Stackly Logo">
       </div>
       <p>
-        Techco is a leading software development company delivering innovative
+        Stackly is a leading software development company delivering innovative
         digital solutions to businesses worldwide.
       </p>
     </div>
