--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 <section class="hero">
 
   <div class="hero-left">
-    <span class="tagline">PERFECT COMPANY SOLUTION</span>
+    <span class="tagline">PERFECT IT SOLUTION</span>
 
     <h1 class="hero-title">
   <span>We Help Companies</span><br>
